<resources>
    <string name="app_name">Sunaada!</string>
    <string name="open_drawer">Navigation Drawer Open</string>
    <string name="close_drawer">Navigation Drawer Close</string>
    <string name="home">Home</string>
    <string name="concerts">CONCERTS</string>
    <string name="upcoming">Upcoming</string>
    <string name="artists">Artists</string>
    <string name="dictionary">DICTIONARY</string>
    <string name="by_venue">By Venue</string>
    <string name="organizers">Organizers</string>
    <string name="event_types">Event Types</string>
    <string name="venues">Venues</string>
</resources>